feat: Override workspace base domain
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/modules/administration-guide/pages/configuring-workspaces-globally.adoc
+++ b/modules/administration-guide/pages/configuring-workspaces-globally.adoc
@@ -20,3 +20,5 @@ This section describes how an administrator can configure workspaces globally.
 * xref:configuring-workspaces-nodeselector.adoc[]
 
 * xref:configuring-allowed-urls-for-cloud-development-environments.adoc[]
+
+* xref:configuring-workspaces-endpoints-base-domain.adoc[]
