--- a/modules/administration-guide/nav.adoc
+++ b/modules/administration-guide/nav.adoc
@@ -52,6 +52,7 @@
 *** xref:configuring-workspaces-nodeselector.adoc[]
 *** xref:configuring-the-open-vsx-registry-url.adoc[]
 *** xref:configuring-allowed-urls-for-cloud-development-environments.adoc[]
+*** xref:configuring-workspaces-endpoints-base-domain.adoc[]
 ** xref:caching-images-for-faster-workspace-start.adoc[]
 *** xref:installing-kubernetes-image-puller.adoc[]
 **** xref:installing-image-puller-on-kubernetes-by-using-cli.adoc[]
