--- a/modules/administration-guide/pages/configuring-networking.adoc
+++ b/modules/administration-guide/pages/configuring-networking.adoc
@@ -12,3 +12,4 @@
 include::example$snip_{project-context}-xref-configuring-che-with-self-signed-certificate.adoc[]
 * xref:importing-untrusted-tls-certificates.adoc[]
 * xref:adding-labels-and-annotations.adoc[]
+* xref:configuring-workspaces-endpoints-base-domain.adoc[]
