--- a/modules/administration-guide/pages/configuring-workspaces-endpoints-base-domain.adoc
+++ b/modules/administration-guide/pages/configuring-workspaces-endpoints-base-domain.adoc
@@ -7,7 +7,7 @@
 [id="configuring-workspaces-endpoints-base-domain"]
 = Configuring workspace endpoints base domain
 
-This section describes how to configure the base domain for workspace endpoints.
+Learn how to configure the base domain for workspace endpoints.
 By default, {prod-short} Operator automatically detects the base domain. To change it, you need to configure the `CHE_INFRA_OPENSHIFT_ROUTE_HOST_DOMAIN__SUFFIX` property in the `CheCluster` Custom Resource.
 [source,yaml,subs="+quotes"]
 ----
