feat: Override workspace base domain (#2826)
* feat: Override workspace base domain

Signed-off-by: Anatolii Bazko <abazko@redhat.com>

* Fixup

Signed-off-by: Anatolii Bazko <abazko@redhat.com>

* Update modules/administration-guide/pages/configuring-workspaces-endpoints-base-domain.adoc

Co-authored-by: Jana Vrbkova <jvrbkova@redhat.com>

---------

Signed-off-by: Anatolii Bazko <abazko@redhat.com>
Co-authored-by: Jana Vrbkova <jvrbkova@redhat.com>

--- a/modules/administration-guide/nav.adoc
+++ b/modules/administration-guide/nav.adoc
@@ -75,6 +75,7 @@
 *** xref:configuring-che-with-self-signed-certificate.adoc[]
 *** xref:importing-untrusted-tls-certificates.adoc[]
 *** xref:adding-labels-and-annotations.adoc[]
+*** xref:configuring-workspaces-endpoints-base-domain.adoc[]
 ** xref:configuring-storage.adoc[]
 *** xref:configuring-storage-classes.adoc[]
 *** xref:configuring-the-storage-strategy.adoc[]
