feat: Configuring proxy article
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/modules/administration-guide/pages/configuring-networking.adoc
+++ b/modules/administration-guide/pages/configuring-networking.adoc
@@ -13,3 +13,4 @@ include::example$snip_{project-context}-xref-configuring-che-with-self-signed-ce
 * xref:importing-untrusted-tls-certificates.adoc[]
 * xref:adding-labels-and-annotations.adoc[]
 * xref:configuring-workspaces-endpoints-base-domain.adoc[]
+* xref:configuring-proxy.adoc[]
