--- a/modules/administration-guide/nav.adoc
+++ b/modules/administration-guide/nav.adoc
@@ -76,6 +76,7 @@
 *** xref:importing-untrusted-tls-certificates.adoc[]
 *** xref:adding-labels-and-annotations.adoc[]
 *** xref:configuring-workspaces-endpoints-base-domain.adoc[]
+*** xref:configuring-proxy.adoc[]
 ** xref:configuring-storage.adoc[]
 *** xref:configuring-storage-classes.adoc[]
 *** xref:configuring-the-storage-strategy.adoc[]
