--- a/modules/administration-guide/pages/configuring-proxy.adoc
+++ b/modules/administration-guide/pages/configuring-proxy.adoc
@@ -13,7 +13,7 @@ On OpenShift cluster, you do not need to configure proxy settings. {prod-short} 
 
 .Procedure
 
-. Create a Secret in the {prod-namespace} {namespace} that contains a user and password for a proxy server. The secret must have the `app.kubernetes.io/part-of=che.eclipse.org` label. Omit this step if the proxy server does not require authentication.
+. (OPTIONAL) Create a Secret in the {prod-namespace} {namespace} that contains a user and password for a proxy server. The secret must have the `app.kubernetes.io/part-of=che.eclipse.org` label. Skip this step if the proxy server does not require authentication.
 +
 [source,subs="+quotes,+attributes,+macros"]
 ----
