--- a/modules/administration-guide/pages/configuring-proxy.adoc
+++ b/modules/administration-guide/pages/configuring-proxy.adoc
@@ -34,7 +34,7 @@ EOF
 <1> The username for the proxy server.
 <2> The password for the proxy server.
 
-. Configure the proxy or override the cluster-wide proxy configuration by setting the following properties in the CheCluster custom resource:
+. Configure the proxy or override the cluster-wide proxy configuration for an OpenShift cluster by setting the following properties in the CheCluster custom resource:
 +
 [source,subs="+quotes,attributes,macros"]
 ----
