feat: Installing che on EKS
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/modules/administration-guide/examples/snip_che-installing-che.adoc
+++ b/modules/administration-guide/examples/snip_che-installing-che.adoc
@@ -14,6 +14,7 @@ You can deploy only one instance of {prod-short} per cluster.
 * xref:installing-che-on-openshift-using-the-web-console.adoc[]
 * xref:installing-che-in-a-restricted-environment.adoc[]
 * xref:installing-che-on-microsoft-azure.adoc[]
+* xref:installing-che-on-amazon-elastic-kubernetes-service.adoc[]
 
 .Installing {prod-short} on a local single-node cluster
 
