--- a/modules/administration-guide/pages/installing-che-on-amazon-elastic-kubernetes-service.adoc
+++ b/modules/administration-guide/pages/installing-che-on-amazon-elastic-kubernetes-service.adoc
@@ -32,4 +32,6 @@ include::partial$proc_creating-lets-encrypt-certificate-for-che-on-amazon-elasti
 
 include::partial$proc_installing-keycloak-on-amazon-elastic-kubernetes-service.adoc[leveloffset=+1]
 
+include::partial$proc_associate-keycloak-as-oidc-identity-provider-on-amazon-elastic-kubernetes-service.adoc[leveloffset=+1]
+
 include::partial$proc_installing-che-on-amazon-elastic-kubernetes-service.adoc[leveloffset=+1]
