--- a/modules/administration-guide/partials/proc_installing-keycloak-on-amazon-elastic-kubernetes-service.adoc
+++ b/modules/administration-guide/partials/proc_installing-keycloak-on-amazon-elastic-kubernetes-service.adoc
@@ -14,7 +14,7 @@ KEYCLOAK_DOMAIN=keycloak.$DOMAIN_NAME
 
 . Install Keycloak:
 +
-IMPORTANT: While this guide provides a development configuration for deploying Keycloak on {kubernetes}, keep in mind that production environments require different settings, for instance configuring external databases.
+IMPORTANT: While this guide provides a development configuration for deploying Keycloak on {kubernetes}, remember that production environments require different settings, for instance configuring external databases.
 +
 [source,subs="+attributes"]
 ----
