--- a/modules/administration-guide/partials/proc_associate-keycloak-as-oidc-identity-provider-on-amazon-elastic-kubernetes-service.adoc
+++ b/modules/administration-guide/partials/proc_associate-keycloak-as-oidc-identity-provider-on-amazon-elastic-kubernetes-service.adoc
@@ -22,7 +22,7 @@ eksctl associate identityprovider \
 apiVersion: eksctl.io/v1alpha5
 kind: ClusterConfig
 identityProviders:
-  - name: my-provider
+  - name: {prod-id-short}-oidc
     type: oidc
     issuerUrl: https://$KEYCLOAK_DOMAIN/realms/che
     clientId: k8s-client
