--- a/modules/administration-guide/partials/configuring-environment-variables-for-amazon-elastic-kubernetes-service.adoc
+++ b/modules/administration-guide/partials/configuring-environment-variables-for-amazon-elastic-kubernetes-service.adoc
@@ -5,13 +5,20 @@
 [id="configuring-environment-variables-for-amazon-elastic-kubernetes-service"]
 = Configuring environment variables for {eks-short}
 
-Follow this guide to define environment variables and update your `kubeconfig` to connect to {eks-short}.
+Follow these instructions to define environment variables and update your `kubeconfig` to connect to {eks-short}.
 
 .Prerequisites
 
 * Amazon EKS cluster. See: link:https://docs.aws.amazon.com/eks/latest/userguide/create-cluster.html[Create an Amazon EKS cluster]
 
 .Procedure
+
+. Find the AWS account ID:
++
+[source,subs="attributes+"]
+----
+AWS_ACCOUNT_ID=$(aws sts get-caller-identity --query "Account" --output text)
+----
 
 . Define the cluster name:
 +
