--- a/modules/administration-guide/partials/proc_installing-cert-manager-on-amazon-elastic-kubernetes-service.adoc
+++ b/modules/administration-guide/partials/proc_installing-cert-manager-on-amazon-elastic-kubernetes-service.adoc
@@ -1,7 +1,7 @@
 [id="installing-cert-manager-on-amazon-elastic-kubernetes-service"]
 = Installing cert-manager on {eks-short}
 
-Use the following instructions to install the link:https://cert-manager.io[cert-manager] on {eks-short}.
+Follow these instructions to install the link:https://cert-manager.io[cert-manager] on {eks-short}.
 
 .Procedure
 
