--- a/modules/administration-guide/partials/proc_configuring-dns-on-amazon-elastic-kubernetes-service.adoc
+++ b/modules/administration-guide/partials/proc_configuring-dns-on-amazon-elastic-kubernetes-service.adoc
@@ -5,7 +5,7 @@
 [id="configuring-DNS-on-amazon-elastic-kubernetes-service"]
 = Configuring DNS on {eks-short}
 
-Configure DNS on {eks-short}.
+Follow these instructions to configure DNS on {eks-short}.
 
 .Prerequisites
 
@@ -13,37 +13,37 @@ Configure DNS on {eks-short}.
 
 .Procedure
 
-. Define the previously registered domain name:
+. Define the registered domain name:
 +
-[source,shell]
+[source,subs="attributes+"]
 ----
-DOMAIN_NAME=eclipse-che-eks-clould.click
+CHE_DOMAIN_NAME=eclipse-che-eks-clould.click
 ----
 
 . Define domain name for Keycloak OIDC provider:
 +
-[source,shell]
+[source,subs="attributes+"]
 ----
-KEYCLOAK_DOMAIN_NAME=keycloak.$DOMAIN_NAME
+KEYCLOAK_DOMAIN_NAME=keycloak.$CHE_DOMAIN_NAME
 ----
 
 . Find out the hosted zone ID for the domain:
 +
-[source,shell]
+[source,subs="attributes+"]
 ----
-HOSTED_ZONE_ID=$(aws route53 list-hosted-zones-by-name --dns-name $DOMAIN_NAME --query "HostedZones[0].Id" --output text)
+HOSTED_ZONE_ID=$(aws route53 list-hosted-zones-by-name --dns-name $CHE_DOMAIN_NAME --query "HostedZones[0].Id" --output text)
 ----
 
 . Find out the Canonical Hosted Zone ID for the load balancer:
 +
-[source,shell]
+[source,subs="attributes+"]
 ----
 CANONICAL_HOSTED_ZONE_ID=$(aws elbv2 describe-load-balancers --query "LoadBalancers[0].CanonicalHostedZoneId" --output text)
 ----
 
 . Find out the DNS name for the load balancer:
 +
-[source,shell]
+[source,subs="attributes+"]
 ----
 DNS_NAME=$({orch-cli} get service -n ingress-nginx ingress-nginx-controller -o=jsonpath='{.status.loadBalancer.ingress[0].hostname}')
 ----
@@ -60,7 +60,7 @@ aws route53 change-resource-record-sets \
      "Changes": [{
       "Action"              : "CREATE",
        "ResourceRecordSet"  : {
-         "Name"              : "'"$DOMAIN_NAME"'",
+         "Name"              : "'"$CHE_DOMAIN_NAME"'",
          "Type"             : "A",
          "AliasTarget"      : {
             "HostedZoneId"            : "'"$CANONICAL_HOSTED_ZONE_ID"'",
@@ -73,11 +73,11 @@ aws route53 change-resource-record-sets \
   '
 ----
 
-. Verify that you can access the domain externally:
+. Verify that you can access {prod-short} domain externally:
 +
 [source,subs="attributes+"]
 ----
-until curl $DOMAIN_NAME; do sleep 5s; done
+until curl $CHE_DOMAIN_NAME; do sleep 5s; done
 ----
 
 . Create a DNS record set:
@@ -92,7 +92,7 @@ aws route53 change-resource-record-sets \
      "Changes": [{
       "Action"              : "CREATE",
        "ResourceRecordSet"  : {
-         "Name"              : "'"KEYCLOAK_DOMAIN_NAME"'",
+         "Name"              : "'"$KEYCLOAK_DOMAIN_NAME"'",
          "Type"             : "A",
          "AliasTarget"      : {
             "HostedZoneId"            : "'"$CANONICAL_HOSTED_ZONE_ID"'",
