--- a/modules/administration-guide/partials/proc_associate-keycloak-as-oidc-identity-provider-on-amazon-elastic-kubernetes-service.adoc
+++ b/modules/administration-guide/partials/proc_associate-keycloak-as-oidc-identity-provider-on-amazon-elastic-kubernetes-service.adoc
@@ -23,7 +23,7 @@ metadata:
   name: $CHE_EKS_CLUSTER_NAME
   region: $CHE_EKS_CLUSTER_REGION
 identityProviders:
-  - name: {prod-id-short}-oidc
+  - name: keycloak-oidc
     type: oidc
     issuerUrl: https://$KEYCLOAK_DOMAIN_NAME/realms/che
     clientId: k8s-client
