--- a/modules/administration-guide/partials/proc_installing-che-on-amazon-elastic-kubernetes-service.adoc
+++ b/modules/administration-guide/partials/proc_installing-che-on-amazon-elastic-kubernetes-service.adoc
@@ -43,8 +43,10 @@ EOF
 {prod-cli} server:deploy \
     --platform k8s \
     --domain $CHE_DOMAIN_NAME \
-    --che-operator-cr-patch-yaml che-patch.yaml \
-    --skip-cert-manager
+    --che-operator-cr-patch-yaml che-cluster-patch.yaml \
+    --skip-cert-manager \
+    --k8spodreadytimeout 240000 \
+    --k8spoddownloadimagetimeout 240000
 ----
 
 . Navigate to the {prod-short} cluster instance:
