--- a/modules/administration-guide/partials/proc_installing-che-on-amazon-elastic-kubernetes-service.adoc
+++ b/modules/administration-guide/partials/proc_installing-che-on-amazon-elastic-kubernetes-service.adoc
@@ -32,7 +32,7 @@ spec:
   components:
     cheServer:
       extraProperties:
-        CHE_OIDC_EMAIL__CLAIM: email
+        CHE_OIDC_USERNAME__CLAIM: email
 EOF
 ----
 
