--- a/modules/administration-guide/partials/configuring-environment-variables-for-amazon-elastic-kubernetes-service.adoc
+++ b/modules/administration-guide/partials/configuring-environment-variables-for-amazon-elastic-kubernetes-service.adoc
@@ -41,7 +41,7 @@ CHE_EKS_CLUSTER_REGION=eu-central-1
 aws eks update-kubeconfig --region $CHE_EKS_CLUSTER_REGION --name $CHE_EKS_CLUSTER_NAME
 ----
 
-. Ensure that you have default storage class set:
+. Make sure that you have the default storage class set:
 +
 [source,subs="attributes+"]
 ----
