--- a/modules/administration-guide/partials/proc_installing-keycloak-on-amazon-elastic-kubernetes-service.adoc
+++ b/modules/administration-guide/partials/proc_installing-keycloak-on-amazon-elastic-kubernetes-service.adoc
@@ -7,7 +7,10 @@ Follow these instructions to install https://www.keycloak.org/[Keycloak] as the 
 
 . Install Keycloak:
 +
-IMPORTANT: While this guide provides a development configuration for deploying Keycloak on {kubernetes}, remember that production environments require different settings, for instance configuring external databases.
+[IMPORTANT]
+====
+ While this guide provides a development configuration for deploying Keycloak on {kubernetes}, remember that production environments might require different settings, such as external database configuration.
+====
 +
 [source,subs="+attributes"]
 ----
