feat: persistent user home documentation (#2822)
* feat: persistent user home documentation

Signed-off-by: dkwon17 <dakwon@redhat.com>

* Update modules/administration-guide/pages/about-persistent-user-home.adoc

Co-authored-by: Jana Vrbkova <jvrbkova@redhat.com>

* Update modules/administration-guide/pages/about-persistent-user-home.adoc

Co-authored-by: Jana Vrbkova <jvrbkova@redhat.com>

* Update modules/administration-guide/pages/about-persistent-user-home.adoc

Co-authored-by: Jana Vrbkova <jvrbkova@redhat.com>

* Update modules/administration-guide/pages/about-persistent-user-home.adoc

Co-authored-by: Jana Vrbkova <jvrbkova@redhat.com>

* Update modules/administration-guide/pages/about-persistent-user-home.adoc

Co-authored-by: Jana Vrbkova <jvrbkova@redhat.com>

* Update modules/administration-guide/pages/about-persistent-user-home.adoc

Co-authored-by: Jana Vrbkova <jvrbkova@redhat.com>

* Update based on PR feedback

Signed-off-by: dkwon17 <dakwon@redhat.com>

* Update stow version

Signed-off-by: dkwon17 <dakwon@redhat.com>

* Update PR typo

Signed-off-by: dkwon17 <dakwon@redhat.com>

---------

Signed-off-by: dkwon17 <dakwon@redhat.com>
Co-authored-by: Jana Vrbkova <jvrbkova@redhat.com>

--- a/modules/administration-guide/nav.adoc
+++ b/modules/administration-guide/nav.adoc
@@ -82,6 +82,7 @@
 *** xref:configuring-storage-classes.adoc[]
 *** xref:configuring-the-storage-strategy.adoc[]
 *** xref:configuring-storage-sizes.adoc[]
+*** xref:about-persistent-user-home.adoc[]
 ** xref:configuring-dashboard.adoc[]
 *** xref:configuring-getting-started-samples.adoc[]
 *** xref:configuring-editors-definitions.adoc[]
