docs: Using https://open-vsx.org with thousands of community-supported extensions is not recommended in an air-gapped environment (#2832)
* docs: Using https://open-vsx.org with thousands of community-supported extensions is not recommended in an air-gapped environment

Signed-off-by: Ilya Buziuk <ibuziuk@redhat.com>

* Update modules/administration-guide/partials/proc_selecting-an-open-vsx-registry-instance.adoc

---------

Signed-off-by: Ilya Buziuk <ibuziuk@redhat.com>

--- a/modules/administration-guide/partials/proc_selecting-an-open-vsx-registry-instance.adoc
+++ b/modules/administration-guide/partials/proc_selecting-an-open-vsx-registry-instance.adoc
@@ -24,8 +24,9 @@ spec:
 ----
 <1> For example: `openVSXURL: "pass:c,a,q[https://open-vsx.org]"`.
 +
-[TIP]
-==== 
+[IMPORTANT]
+====
+* Using link:https://open-vsx.org[https://open-vsx.org] is not recommended in an air-gapped environment, isolated from the internet. In order to reduce the risk of malware infections and unauthorized access to your code use the embedded or self-hosted Open VSX registry with the curated set of extensions.
 
 * To select the embedded Open VSX registry instance in the `plugin-registry` pod, use `openVSXURL: ''`. You can xref:adding-or-removing-extensions-in-the-embedded-open-vsx-registry-instance[customize the list of included extensions].
 
